css/app.css
/* ... */
h2:after {
  content: '';
  display: block;
  background-color: var(--insta5);
  height: 2px; 
  justify-items: self-start;
  margin-left: 2rem;
  text-align: end;
}
.about-section h2:after {width: 136px;}
.services-section h2:after {margin-left: 2.2rem; width: 116px;}
.qa-section h2:after {margin-left: 1.7rem; width: 348px;}
@media screen and (max-width: 380px){
  .qa-section h2:after {margin-left: 1rem; width: 240px;}
}
.testimonials-section h2:after {margin-left: 1.9rem; width: 198px;}
.follow-section h2:after {width: 152px;}
@media screen and (max-width: 380px) {
  h2 {
    font-size: 2rem;
    word-spacing: -5px;
  }
}
h3 {
  color: var(--text);
  font-family: 'Open Sans', sans-serif;
  font-size: 1.65rem;
  font-weight: bold;
  line-height: .85rem;
  text-align: center;
}
h3.fff {
  -ms-flex-line-pack: center;
      align-content: center;
  color: var(--insta4);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  line-height: 1px;
  margin: 4rem auto;
  position: relative;
  text-align: center;
}
h3.fff::before {
  /* background-color: var(--insta1); */
  /* box-shadow: 1px 2px 5px gray; */
  background-color: #FFFFFF;
  border-radius: 50%;
  content: '';
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem 15rem; 
  position: absolute;
    top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
  z-index: -1;
}
h3.fff::after {
  border-top: 1px solid var(--insta5);
  content: '';
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
    top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
  width: 90%;
  z-index: -2;
}
.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.grid {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[12];
  grid-template-columns: repeat(12, 1fr);
  grid-auto-rows: auto 50px;
}
@media screen and (min-width: 960px) {
  .grid {
    grid-auto-rows: 50px !important;
  }
}

.item-container {
  -ms-grid-column: 1;
  -ms-grid-column-span: 12;
  grid-column: 1/13;
}
section .item-container {
  padding: 1rem;
}
main {
  width: 100%;
}
footer {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin-top: 4rem;
  padding: 1rem;
}
footer p {
  font-size: .75rem;
  margin: 0;
  padding: 0;
  text-align: center;
}
@media screen and (min-width: 960px) {
  main {
    margin: 0 auto;
    max-width: 1220px;
    min-width: auto;
  }
  section {
    width: 960px;
    margin: 0 auto;
  }
  footer p {
    font-size: 1rem;
    padding: 3rem 0;
  }
}
 .hide {
    opacity: 0;
  }
  .show {
    opacity: 1;
  }

 .fade-in {
    -webkit-animation: fadeIn 2s;
            animation: fadeIn 2s;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    opacity: 1;
    visibility: visible;
  }
 .fade-out {
    -webkit-animation: fadeOut 2s;
            animation: fadeOut 2s;
    display: none;
    opacity: 0;
    visibility: none;
  }

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}


/* Bootstrap Overrides */
.card {
  background-color: var(--insta1);
  -webkit-box-shadow: 2px 4px 6px #A8A8A8;
          box-shadow: 2px 4px 6px #A8A8A8;
}
/* Bootstrap Overrides */

.accordions {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}
.accordions input {
  display: none;
}
.accordions label {
  /* color: #FFF; */
  background: var(--insta1);
  border-bottom: 1px solid var(--insta4);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  color: var(--insta4);
  cursor: pointer;
  display: block;
  margin: 0 0 1px 0;
  padding: 8px 45px 8px 22px;
  position: relative;
  -webkit-transition: ease .5s;
  -o-transition: ease .5s;
  transition: ease .5s;
}
.accordions label:hover {
  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--insta1)), color-stop(80%, var(--insta2)));
  background-image: -o-linear-gradient(top, var(--insta1), var(--insta2) 80%);
  background-image: linear-gradient(to bottom, var(--insta1), var(--insta2) 80%);
}
.accordions label::after {
  color: var(--insta3);
	content: '\f078';
	font-family: "Font Awesome 5 Free";
	font-size: 22px;
	font-weight: 600; /*won't display without this*/
	position: absolute;
    right: 10px;
    top: 50%;
  text-shadow: 0 1px 2px var(--insta4);
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
}
.accordions input:checked + label::after {
	content: '\f077';
}
.accordions .accordion-content {
  border-bottom: 1px solid var(--insta2);
  border-left: 1px solid var(--insta2);
  border-right: 1px solid var(--insta2);
  border-bottom-left-radius: 5px;
  border-bottom-left-radius: 5px;
  margin: 0 0 1px 0;
  padding: 10px 25px;
}
.accordions input + label + .accordion-content {
  display: none;
  min-height: 0;
}
.accordions input:checked + label + .accordion-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  min-height: 70px;
  -webkit-animation: fadeIn 1s;
          animation: fadeIn 1s;
}
/* ... */

